logs/wsgifilter.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/HTTPEncode-0.1.egg-info'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/WSGIFilter-0.2.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/httpencode'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/wsgifilter'...
Compiling './lib/python3.5/site-packages/wsgifilter/cache_utils.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cache_utils.py, line 143)
Listing './lib/python3.5/site-packages/wsgifilter/examples'...
Compiling './lib/python3.5/site-packages/wsgifilter/examples/testingvars.py'...
***   File "./lib/python3.5/site-packages/wsgifilter/examples/testingvars.py", line 23
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgifilter/filter.py'...
***   File "./lib/python3.5/site-packages/wsgifilter/filter.py", line 70
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsgifilter/fixtures'...
Compiling './lib/python3.5/site-packages/wsgifilter/lxmldoctest.py'...
***   File "./lib/python3.5/site-packages/wsgifilter/lxmldoctest.py", line 126
    except etree.XMLSyntaxError, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgifilter/proxycommand.py'...
***   File "./lib/python3.5/site-packages/wsgifilter/proxycommand.py", line 90
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
